--- a/my-nx-workspace/nx.json
+++ b/my-nx-workspace/nx.json
@@ -13,6 +13,12 @@
     },
     "fire-base-animation-e2e": {
       "tags": []
+    },
+    "year-of-moo-animation": {
+      "tags": []
+    },
+    "year-of-moo-animation-e2e": {
+      "tags": []
     }
   }
 }
