:tractor: :sparkles: added use-animation, issue #6

--- a/my-nx-workspace/angular.json
+++ b/my-nx-workspace/angular.json
@@ -295,5 +295,5 @@
     },
     "defaultCollection": "@nrwl/schematics"
   },
-  "defaultProject": "fire-base-animation"
+  "defaultProject": "year-of-moo-animation"
 }
