--- a/my-nx-workspace/angular.json
+++ b/my-nx-workspace/angular.json
@@ -286,6 +286,148 @@
           }
         }
       }
+    },
+    "responsive-thumbnails": {
+      "root": "apps/responsive-thumbnails/",
+      "sourceRoot": "apps/responsive-thumbnails/src",
+      "projectType": "application",
+      "prefix": "my-nx-workspace",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss",
+          "spec": false
+        },
+        "@schematics/angular:class": {
+          "spec": false
+        },
+        "@schematics/angular:directive": {
+          "spec": false
+        },
+        "@schematics/angular:guard": {
+          "spec": false
+        },
+        "@schematics/angular:module": {
+          "spec": false
+        },
+        "@schematics/angular:pipe": {
+          "spec": false
+        },
+        "@schematics/angular:service": {
+          "spec": false
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/responsive-thumbnails",
+            "index": "apps/responsive-thumbnails/src/index.html",
+            "main": "apps/responsive-thumbnails/src/main.ts",
+            "polyfills": "apps/responsive-thumbnails/src/polyfills.ts",
+            "tsConfig": "apps/responsive-thumbnails/tsconfig.app.json",
+            "assets": [
+              "apps/responsive-thumbnails/src/favicon.ico",
+              "apps/responsive-thumbnails/src/assets"
+            ],
+            "styles": [
+              "apps/responsive-thumbnails/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/responsive-thumbnails/src/environments/environment.ts",
+                  "with": "apps/responsive-thumbnails/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "responsive-thumbnails:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "responsive-thumbnails:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "responsive-thumbnails:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "apps/responsive-thumbnails/src/test.ts",
+            "polyfills": "apps/responsive-thumbnails/src/polyfills.ts",
+            "tsConfig": "apps/responsive-thumbnails/tsconfig.spec.json",
+            "karmaConfig": "apps/responsive-thumbnails/karma.conf.js",
+            "styles": [
+              "apps/responsive-thumbnails/src/styles.scss"
+            ],
+            "scripts": [],
+            "assets": [
+              "apps/responsive-thumbnails/src/favicon.ico",
+              "apps/responsive-thumbnails/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/responsive-thumbnails/tsconfig.app.json",
+              "apps/responsive-thumbnails/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "responsive-thumbnails-e2e": {
+      "root": "apps/responsive-thumbnails-e2e/",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "apps/responsive-thumbnails-e2e/protractor.conf.js",
+            "devServerTarget": "responsive-thumbnails:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "responsive-thumbnails:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/responsive-thumbnails-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
@@ -295,5 +437,5 @@
     },
     "defaultCollection": "@nrwl/schematics"
   },
-  "defaultProject": "year-of-moo-animation"
+  "defaultProject": "responsive-thumbnails"
 }
