--- a/my-nx-workspace/nx.json
+++ b/my-nx-workspace/nx.json
@@ -19,6 +19,12 @@
     },
     "year-of-moo-animation-e2e": {
       "tags": []
+    },
+    "responsive-thumbnails": {
+      "tags": []
+    },
+    "responsive-thumbnails-e2e": {
+      "tags": []
     }
   }
 }
