:tractor: :sparkles: added app and service, issue #10

--- a/my-nx-workspace/nx.json
+++ b/my-nx-workspace/nx.json
@@ -25,6 +25,12 @@
     },
     "responsive-thumbnails-e2e": {
       "tags": []
+    },
+    "http-client-testing": {
+      "tags": []
+    },
+    "http-client-testing-e2e": {
+      "tags": []
     }
   }
 }
