--- a/nx-workspace/package.json
+++ b/nx-workspace/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-nx-workspace",
+  "name": "nx-workspace",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -16,6 +16,7 @@
     "affected:test": "./node_modules/.bin/nx affected:test",
     "affected:lint": "./node_modules/.bin/nx affected:lint",
     "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
+    "affected": "./node_modules/.bin/nx affected",
     "format": "./node_modules/.bin/nx format:write",
     "format:write": "./node_modules/.bin/nx format:write",
     "format:check": "./node_modules/.bin/nx format:check",
@@ -27,47 +28,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "@ngrx/effects": "6.0.1",
-    "@ngrx/router-store": "6.0.1",
-    "@ngrx/store": "6.0.1",
-    "@nrwl/nx": "6.3.0",
-    "core-js": "^2.6.5",
-    "rxjs": "^6.4.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.29"
+    "@angular/animations": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
+    "core-js": "^2.5.4",
+    "rxjs": "6.3.3",
+    "zone.js": "^0.8.26",
+    "@nrwl/nx": "7.6.2",
+    "@ngrx/effects": "7.2.0",
+    "@ngrx/router-store": "7.2.0",
+    "@ngrx/store": "7.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.4",
-    "@angular/cli": "6.1.2",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
-    "@ngrx/store-devtools": "6.0.1",
-    "@nrwl/schematics": "6.3.0",
-    "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
+    "@angular/cli": "7.3.1",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/language-service": "^7.0.0",
+    "@angular-devkit/build-angular": "0.13.1",
+    "@ngrx/store-devtools": "7.2.0",
+    "ngrx-store-freeze": "0.2.4",
+    "@nrwl/schematics": "7.6.2",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "0.3.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "codelyzer": "~4.5.0",
+    "dotenv": "6.2.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "3.2.2",
+    "prettier": "1.15.2",
+    "protractor": "~5.4.0",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngrx-store-freeze": "0.2.4",
-    "prettier": "1.13.7",
-    "protractor": "^5.4.2",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^3.2.4"
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-marbles": "0.4.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3"
   }
 }
